Tenant related development update.
- Spring boot,Java, Maven update
- Tenant path related error resolved in html files.
- Removed unnecessary dev files.
- Tenant based configurations improvements